@@ -1,4 +1,5 @@
 0.07
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.21 version.
  - Update author github username.
  - Update copyright years.
